methods.args.MethodsArgs.scala.code

def move(nbPas: Int,versLAvant: Boolean) : Boolean =
{ if (versLAvant == true) { avance();
  }
else {
  recule();
} return }
val res = divise(7 , true)
